# src/routes/authorsRouter.js
@@ -6,13 +6,15 @@ import {
 	getAuthorById,
 	updateAuthor,
 } from "../controllers/authorsControllers.js";
+import validateAuthors from "../middlewares/validateAuthors.js";
 
 const authorsRouter = Router();
 
 authorsRouter.get("/", getAllAuthors);
 authorsRouter.get("/:id", getAuthorById);
-authorsRouter.post("/", createAuthor);
-authorsRouter.put("/:id", updateAuthor);
+
+authorsRouter.post("/", validateAuthors, createAuthor);
+authorsRouter.put("/:id", validateAuthors, updateAuthor);
 authorsRouter.delete("/:id", deleteAuthor);
 
 export default authorsRouter;
