# src/routes/postsRouter.js
@@ -7,14 +7,15 @@ import {
 	getPostsByAuthor,
 	updatePost,
 } from "../controllers/postsControllers.js";
+import validatePosts from "../middlewares/validatePosts.js";
 
 const postsRouter = Router();
 
 postsRouter.get("/", getAllPosts);
 postsRouter.get("/:id", getPostById);
 postsRouter.get("/posts/:author_id", getPostsByAuthor);
-postsRouter.post("/", createPost);
-postsRouter.put("/:id", updatePost);
+postsRouter.post("/", validatePosts, createPost);
+postsRouter.put("/:id", validatePosts, updatePost);
 postsRouter.delete("/:id", deletePost);
 
 export default postsRouter;
